--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -29,3 +29,18 @@
     background: #ebfffc;
     cursor: pointer;
 }
+.weather-icon{
+    width: 150px;
+    margin: 30px 0;
+
+}
+.temperature{
+    font-size: 80px;
+    color: #fff;
+    line-height: 1;
+}
+.location{
+    font-size: 40px;
+    color: #fff;
+    margin-top: 10px;
+}
