--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -44,3 +44,26 @@
     color: #fff;
     margin-top: 10px;
 }
+.weather-data{
+    width: 100%;
+    margin-top: 40px;
+    color: #c1c1c1;
+    display: flex;
+    justify-content: space-between;
+}
+.weather-data .col{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 12px;
+    font-size: 22px;
+}
+.weather-data .col span{
+    font-size: 16px;
+    color: #c1c1c1;
+    display: block;
+}
+.weather-data .col .img{
+    width: 26px;
+    margin-top: 10px;
+}
