--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 }
 .app{
   padding: 50px;
-  min-width: 100vh;
+  min-height: 100vh;  
+  width: 100%;
   display: grid;
-  background: #e2d4ff;
+  background: #c1b0fff7;
 }
